examples/test/testpolicy10083.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10083
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key15: value49
      key6: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value1
          key5: value1
      podSelector:
        matchLabels:
          key1: value24
